<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/tool_bar_layout" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/bluetooth_suggest"
                android:textColor="@color/main_tv" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f5f4f5"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/device_temperature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/bluetooth_temperature_text"
                        android:textColor="@color/green"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/device_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/bluetooth_temperature_duration_text"
                        android:textColor="@color/green"
                        android:textSize="16dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/bluetooth_temperature"
                        android:textColor="@color/main_tv" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/bluetooth_temperature_duration"
                        android:textColor="@color/main_tv" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

        <include
            layout="@layout/raiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <include
            layout="@layout/ble_pro_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/light_home_man_radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="3dp">
                <RadioButton
                    android:id="@+id/manual_open"
                    android:layout_width="match_parent"
                    android:layout_height="63dp"
                    android:background="@drawable/radio_home_man_text_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="手动开启"
                    android:textColor="@drawable/radio_home_man_text" />

                <RadioButton
                    android:id="@+id/manual_off"
                    android:layout_width="match_parent"
                    android:layout_height="63dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/radio_home_man_text_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="手动关闭"
                    android:textColor="@drawable/radio_home_man_text" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/light_energy_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/BluetoothLightToast"
                    android:textColor="@color/color_BLACK" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/BluetoothLightMainVersion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/BluetoothLightMainVersion"
                    android:textColor="@color/color_BLACK" />

                <TextView
                    android:id="@+id/BluetoothLightMode1Version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/BluetoothLightMode1Version"
                    android:textColor="@color/color_BLACK" />

                <TextView
                    android:id="@+id/BluetoothLightMode2Version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/BluetoothLightMode2Version"
                    android:textColor="@color/color_BLACK" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>