<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/show_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/start_time_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/start_time"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/end_time_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/end_time"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00"
                    android:id="@+id/start_hour"
                    android:textSize="15dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" : "
                    android:textSize="15dp" />
                <TextView
                    android:id="@+id/start_minute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00"
                    android:id="@+id/end_hour"
                    android:textSize="15dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" : "
                    android:textSize="15dp" />
                <TextView
                    android:id="@+id/end_minute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00"
                    android:textSize="15dp" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/time_picker_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_time">

        <LinearLayout
            android:id="@+id/time_picker"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginBottom="18dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="8dp">

            <cn.carbswang.android.numberpickerview.library.NumberPickerView
                android:id="@+id/my_picker_hour"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="picker_hour"
                app:npv_ItemPaddingHorizontal="5dp"
                app:npv_ItemPaddingVertical="5dp"
                app:npv_RespondChangeInMainThread="false"
                app:npv_ShowCount="3"
                app:npv_TextSizeNormal="16sp"
                app:npv_TextSizeSelected="20sp"
                app:npv_WrapSelectorWheel="true" />

            <cn.carbswang.android.numberpickerview.library.NumberPickerView
                android:id="@+id/my_picker_minute"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="picker_minute"
                app:npv_HintText="@string/hour_hint"
                app:npv_ItemPaddingHorizontal="5dp"
                app:npv_ItemPaddingVertical="5dp"
                app:npv_ShowCount="3"
                app:npv_TextSizeNormal="16sp"
                app:npv_TextSizeSelected="20sp"
                app:npv_WrapSelectorWheel="true" />

            <cn.carbswang.android.numberpickerview.library.NumberPickerView
                android:id="@+id/my_picker_half_day"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"

                app:npv_HintText="@string/minute_hint"
                app:npv_ItemPaddingHorizontal="5dp"
                app:npv_ItemPaddingVertical="5dp"

                app:npv_ShowCount="3"
                app:npv_TextSizeNormal="16sp"
                app:npv_TextSizeSelected="20sp"
                app:npv_WrapSelectorWheel="false" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_get_info"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/time_picker_ll"
        android:layout_marginTop="17dp"
        android:text="@string/get_data"
        android:textAllCaps="false" />


</RelativeLayout>